# os-kernel

./: BareBones.cmake  CMakeLists.txt  README.MD  kernel.c  make_iso.sh  printf_layer.c  snek.c  snek.h
arch/i386/: asm.c  asm.h  bda.c  bda.h  com.c  com.h  ps2.c  ps2.h  ps2_keyboard.c  ps2_keyboard.h  tty.c  tty.h
lib/printf/: printf.c  printf.h
